...
        Wrap(
          children: [
            const Text(
              'Data by Account',
              style: TextStyle(fontSize: 16, fontWeight: FontWeight.bold),
            ),
            Column(
              children: [
                // BarChartRodData(toY: animals, color: Colors.blue),
                // BarChartRodData(toY: cages, color: Colors.orange),
                // BarChartRodData(toY: matings, color: Colors.green),
                // BarChartRodData(toY: litters, color: Colors.purple),
                Row(
                  mainAxisAlignment: MainAxisAlignment.start,
                  children: [
                    Icon(Icons.square, color: Colors.blue),
                    Expanded(flex: 5, child: Text('Animals')),
                    Icon(Icons.square, color: Colors.orange),
                    Expanded(flex: 5, child: Text('Cages')),
...
