...
            ),
            MenuItemButton(
              onPressed: () {
                FocusScope.of(context).unfocus();
                context.go('/cages/grid');
              },
              child: const Text('Grid View'),
            ),
          ],
          child: const Text('Cage'),
        ),
        SubmenuButton(
          menuChildren: [
...
